<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Sudoku Game</string>
    <string name="app_name">Twodoku</string>
    
    <string name="title">Welcome to Twodoku!</string>
    <string name="twoplayer">Start new game</string>
    
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="ok">OK</string>
    <string name="newplayer">New</string>
    <string name="login">Login</string>
    
    <string name="stats">Stats</string>
    <string name="changepassword">Change password</string>
    <string name="oldPassword">Old password:</string>
    <string name="newPassword">New password:</string>
    <string name="change">Change</string>
    
    <string name="select_number">Select number:</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="clear">Clear</string>
    <string name="show">Show</string>
    <string name="blank"> </string>
    
    <string name="options">Game Options</string>
    <string name="player2">Player 2 Name:</string>
    <string name="defaultplayer2">Player 2</string>
    <string name="fillCenter">Fill center square</string>
    <string name="cellstofill">Cells to pre-fill:</string>
    <string name="handSize">Hand Size:</string>
    <string name="bonusCells">2x Cells:</string>
    <string name="scoringsystem">Scoring System:</string>
    <string name="bonussystem">Bonus System:</string>
    <string name="multiplierstrategy">Multipliers:</string>
    <string name="handsystem">Hand System:</string>
    <string name="start">Start Game</string>

</resources>