<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/commentMainLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
    <TextView
    	android:id="@+id/numberIntro"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
    	android:text="@string/select_number"
    />
    <TextView
    	android:id="@+id/numberBlankLine"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/numberIntro"
		android:layout_alignParentLeft="true"
    	android:text="@string/blank"
    />
    <LinearLayout
		android:id="@+id/buttonLayoutOne"
	   	android:orientation="horizontal"
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:layout_below="@+id/numberBlankLine"
	    android:layout_alignParentLeft="true">
    	<Button
    		android:id="@+id/numberOne" 
	    	android:layout_width="60sp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/number_one" />
    	<Button android:id="@+id/numberTwo"
			android:layout_width="60sp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/number_two" />
    	<Button android:id="@+id/numberThree"
			android:layout_width="60sp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/number_three" />
    
    </LinearLayout>
    
    <LinearLayout
		android:id="@+id/buttonLayoutTwo"
	   	android:orientation="horizontal"
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:layout_below="@+id/buttonLayoutOne"
	    android:layout_alignParentLeft="true">
    	<Button
    		android:id="@+id/numberFour" 
	    	android:layout_width="60sp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/number_four" />
    	<Button android:id="@+id/numberFive"
			android:layout_width="60sp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/number_five" />
    	<Button android:id="@+id/numberSix"
			android:layout_width="60sp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/number_six" />
    
    </LinearLayout>
    
    <LinearLayout
		android:id="@+id/buttonLayoutThree"
	   	android:orientation="horizontal"
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:layout_below="@+id/buttonLayoutTwo"
	    android:layout_alignParentLeft="true">
    	<Button
    		android:id="@+id/numberSeven" 
	    	android:layout_width="60sp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/number_seven" />
    	<Button android:id="@+id/numberEight"
			android:layout_width="60sp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/number_eight" />
    	<Button android:id="@+id/numberNine"
			android:layout_width="60sp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/number_nine" />
    
    </LinearLayout>
    	
	<Button android:id="@+id/numberCancel"
		android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:layout_below="@+id/buttonLayoutThree"
	   	android:layout_centerInParent="true"
	   	android:text="@string/cancel" />
    
</RelativeLayout>