<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/commentMainLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
    <TextView
    	android:id="@+id/changePasswordIntro"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
    	android:text="@string/changepassword"
    />

    <TextView
    	android:id="@+id/oldPasswordIntro"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/changePasswordIntro"
		android:layout_alignParentLeft="true"
    	android:text="@string/oldPassword"
    />
    <EditText
    	android:id="@+id/oldPasswordInput"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/oldPasswordIntro"
		android:layout_alignParentLeft="true"
		android:inputType="textPassword"
    	android:text="@string/blank"
    />
    
    <TextView
    	android:id="@+id/newPasswordIntro"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/oldPasswordInput"
		android:layout_alignParentLeft="true"
    	android:text="@string/newPassword"
    />
    <EditText
    	android:id="@+id/newPasswordInput"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/newPasswordIntro"
		android:layout_alignParentLeft="true"
		android:inputType="textPassword"
    	android:text="@string/blank"
    />	
   
	<Button android:id="@+id/changeButton"
		android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:layout_below="@+id/newPasswordInput"
	   	android:layout_centerInParent="true"
	   	android:text="@string/change" />
    
</RelativeLayout>