<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:id="@+id/titleOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10sp"
        android:text="@string/options"
        />

    <View  
        android:id="@+id/divider1"
	    android:layout_height="2dp"
	    android:layout_width="fill_parent"
	    android:layout_below="@+id/titleOptions"
	    android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
	    android:background="#000080"
		/>
    
    <TextView
        android:id="@+id/textPlayer1"
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/divider1"
        android:layout_alignParentLeft="true"
        android:text="@string/player1"
        />
    <EditText
        android:id="@+id/inputPlayer1"
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/textPlayer1"
        android:layout_alignParentLeft="true"
        android:text="@string/defaultplayer1"
        />
    
    <TextView
        android:id="@+id/textPlayer2"
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/inputPlayer1"
        android:layout_alignParentLeft="true"
        android:text="@string/player2"
        />
    <EditText
        android:id="@+id/inputPlayer2"
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/textPlayer2"
        android:layout_alignParentLeft="true"
        android:text="@string/defaultplayer2"
        />
    
    <View   
        android:id="@+id/divider2"
	    android:layout_height="2dp"
	    android:layout_width="fill_parent"
	    android:layout_below="@+id/inputPlayer2"
	    android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
	    android:background="#000080"
		/>
    
    <TextView
        android:id="@+id/textCellsToFill"
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/divider2"
        android:layout_alignParentLeft="true"
        android:text="@string/cellstofill"
        />
    <Spinner
  		android:id="@+id/spinnerCellsToFill"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/textCellsToFill"
        android:layout_alignParentLeft="true"
  		android:text=""
  		/>
    
    <TextView
        android:id="@+id/textHandSystem"
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/spinnerCellsToFill"
        android:layout_alignParentLeft="true"
        android:text="@string/handsystem"
        />
    <Spinner
  		android:id="@+id/spinnerHandSystem"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/textHandSystem"
        android:layout_alignParentLeft="true"
  		android:text=""
  		/>
    
    <TextView
        android:id="@+id/textScoringSystem"
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/spinnerHandSystem"
        android:layout_alignParentLeft="true"
        android:text="@string/scoringsystem"
        />
    <Spinner
  		android:id="@+id/spinnerScoringSystem"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/textScoringSystem"
        android:layout_alignParentLeft="true"
  		android:text=""
  		/>

    <View   
        android:id="@+id/divider3"
	    android:layout_height="2dp"
	    android:layout_width="fill_parent"
	    android:layout_below="@+id/spinnerScoringSystem"
	    android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
	    android:background="#000080"
		/>
    
    <Button
        android:id="@+id/buttonStart"
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/divider3"
        android:layout_centerInParent="true"
        android:text="@string/start"
        />
    
</RelativeLayout>